--- a/styles/home.css
+++ b/styles/home.css
@@ -19,6 +19,9 @@
     width:50vw; 
     font-size: medium;
 }
+.folio{
+    display: inline-block;
+}
 .replace_folio{
     display: none;
 }
@@ -107,5 +110,51 @@
     }
     .hire_and_depress{
         font-size: 5vw;
+    }
+}
+.portfolio_title_p{
+    animation: port_p 4s infinite;
+}
+.portfolio_title_o{
+    animation: port_o 4s infinite;
+}
+.portfolio_title_r{
+    animation: port_r 4s infinite;
+}
+.portfolio_title_t{
+    animation: port_p 4s infinite;
+}
+.portfolio_title:hover{
+    .folio{
+        animation: port_folio 4s infinite;
+    }
+}
+@keyframes port_p{
+    0%{transform: rotateY(0deg);}
+    50%{transform: rotateY(180deg);}
+    100%{transform: rotateY(0deg);}
+}
+@keyframes port_o{
+    0%{transform: scale(1);}
+    50%{transform: scale(1.5);}
+    100%{transform: scale(1);}
+}
+@keyframes port_r{
+    0%{transform: rotateX(0deg);}
+    50%{transform: rotateX(180deg);}
+    100%{transform: rotateX(0deg);}
+}
+@keyframes port_folio{
+    0%{
+        transform: rotateX(0deg);
+        color: white;
+    }
+    50%{
+        transform: rotateX(180deg);
+        color: rgb(0, 0, 255);
+    }
+    100%{
+        transform: rotateX(360deg);
+        color: rgb(255, 255, 255);
     }
 }
